# crew-ai-local-llm

./: README.md  agents.py  main.py  pyproject.toml
crewai-advanced-example/: .env.example  README.md  agents.py  main.py  pyproject.toml  tasks.py
crewai-advanced-example/tools/: search_tools.py
crewai-simple-example/: .env.example  main.py
setup/: Llama2Modelfile  MistralModelfile  Modelfile  create-llama2-model-file.sh  create-mistral-model-file.sh
